--- a/en/races/go3v-28km.html
+++ b/en/races/go3v-28km.html
@@ -17,7 +17,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="keywords" content="trail, running, treh, vrhov, slovenija, sabotin, skabrijel, sveta gora">
   <meta name="description"
-    content="Go4trail 2021 | 12km, 28km, 58km | trail running over three summits surrounding the valley of Soča river in the Western Slovenia2020. 11. 2021
+    content="Go4trail 2021 | 12km, 28km, 58km | trail running over three summits surrounding the valley of Soča river in the Western Slovenia, 20. 11. 2021">
   <title>Go4trail | GO3V 28km</title>
   <!--Styles-->
   <link rel="stylesheet" href="/styles/main.css">
@@ -86,7 +86,7 @@
           <li>Start: <b>9.00</b>, <i>Solkan Kayak Center</i></li>
         </ul>
 
-        <p class="20. 11. 2021
+        <p class="top-padding">
           Download <a href="/assets/gpx/GO3V_28km.gpx.zip">GPX 28 km</a>
         </p>
 
