--- a/en/races/gotrim-12km.html
+++ b/en/races/gotrim-12km.html
@@ -17,7 +17,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="keywords" content="trail, running, treh, vrhov, slovenija, sabotin, skabrijel, sveta gora">
   <meta name="description"
-    content="Go4trail 2021 | 12km, 28km, 58km | trail running over three summits surrounding the valley of Soča river in the Western Slovenia, 20. 11. 2021
+    content="Go4trail 2021 | 12km, 28km, 58km | trail running over three summits surrounding the valley of Soča river in the Western Slovenia, 20. 11. 2021">
   <title>Go4trail | GOTRIM 12km</title>
   <!--Styles-->
   <link rel="stylesheet" href="/styles/main.css">
@@ -77,7 +77,7 @@
           <li>Distance: <b>12 km</b></li>
           <li>Elevation: <b>700 m</b></li>
           <li>Refreshment stations: <b>3</b></li>
-          <li>Date: <b>20. 11. 2021/li>
+          <li>Date: <b>20. 11. 2021</b></li>
           <li>Start: <b>9.30</b>, <i>Solkan Kayak Center</i></li>
         </ul>
 
