--- a/it/gare/goultra-58km.html
+++ b/it/gare/goultra-58km.html
@@ -17,7 +17,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="keywords" content="trail, running, treh, vrhov, slovenija, sabotin, skabrijel, sveta gora">
   <meta name="description"
-    content="Go4trail 2021 | 12km, 28km, 58km | trail running over three summits surrounding the valley of Soča river in the Western Slovenia, 20. 11. 2021
+    content="Go4trail 2021 | 12km, 28km, 58km | trail running over three summits surrounding the valley of Soča river in the Western Slovenia, 20. 11. 2021">
   <title>Go4trail | GOULTRA 58km</title>
   <!--Styles-->
   <link rel="stylesheet" href="/styles/main.css">
