--- a/en/index.html
+++ b/en/index.html
@@ -100,7 +100,7 @@
       <div class="content-wrap">
         <ul class="image-grid">
           <li id="race-1">
-            <a href="./en/races/gorica-run">
+            <a href="./races/gorica-run">
               <div class="card-content">
                 <h1 class="card-title">Goriški tek</h1>
                 <p> 4, 10 in 15 km |
@@ -110,7 +110,7 @@
             </a>
           </li>
           <li id="race-2">
-            <a href="./en/races/gotrim-12km">
+            <a href="./races/gotrim-12km">
               <div class="card-content">
                 <h1 class="card-title">GOTRIM</h1>
                 <p> 12 km | 700 m
@@ -119,7 +119,7 @@
             </a>
           </li>
           <li id="race-3">
-            <a href="./en/races/go3v-28km">
+            <a href="./races/go3v-28km">
               <div class="card-content">
                 <h1 class="card-title">GO3V</h1>
                 <p> 28 km | 1675 m
@@ -128,7 +128,7 @@
             </a>
           </li>
           <li id="race-4">
-            <a href="./en/races/goultra-58km">
+            <a href="./races/goultra-58km">
               <div class="card-content">
                 <h1 class="card-title">GOULTRA</h1>
                 <p> 58 km | 2864 m
