--- a/it/index.html
+++ b/it/index.html
@@ -102,7 +102,7 @@
       <div class="content-wrap">
         <ul class="image-grid">
           <li id="race-1">
-            <a href="./it/gare/goriski-tek">
+            <a href="./gare/goriski-tek">
               <div class="card-content">
                 <h1 class="card-title">Goriški tek</h1>
                 <p> 4, 10 in 15 km |
@@ -112,7 +112,7 @@
             </a>
           </li>
           <li id="race-2">
-            <a href="./it/gare/gotrim-12km">
+            <a href="./gare/gotrim-12km">
               <div class="card-content">
                 <h1 class="card-title">GOTRIM</h1>
                 <p> 12 km | 700 m
@@ -121,7 +121,7 @@
             </a>
           </li>
           <li id="race-3">
-            <a href="./it/gare/go3v-28km">
+            <a href="./gare/go3v-28km">
               <div class="card-content">
                 <h1 class="card-title">GO3V</h1>
                 <p> 28 km | 1675 m
@@ -130,7 +130,7 @@
             </a>
           </li>
           <li id="race-4">
-            <a href="./it/gare/goultra-58km">
+            <a href="./gare/goultra-58km">
               <div class="card-content">
                 <h1 class="card-title">GOULTRA</h1>
                 <p> 58 km | 2864 m
