--- a/it/index.html
+++ b/it/index.html
@@ -32,7 +32,7 @@
   <!--Navigation bar-->
   <header id="navigation-bar">
     <div class="home-container">
-      <a href="/" id="logo">Go4trail</a>
+      <a href="/it" id="logo">Go4trail</a>
     </div>
     <div class="menu-icon-container">
       <button class="menu-icon" data-target="menu">
@@ -51,7 +51,7 @@
         <li><a href="chi-siamo" class="menu-link">Chi siamo</a></li>
         <li><a href="contatti" class="menu-link">Contatti</a></li>
         <li>
-          <a href="/" class="language-switch menu-link">SI</a>
+          <a href="/it" class="language-switch menu-link">SI</a>
           <span>/</span>
           <a href="/en" class="language-switch menu-link">EN</a>
         </li>
