--- a/en/races/goriski-tek.html
+++ b/en/races/goriski-tek.html
@@ -2,146 +2,145 @@
 <html lang="en">
 
 <head>
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-157606098-2"></script>
-	<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag() { dataLayer.push(arguments); }
-		gtag('js', new Date());
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-157606098-2"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-		gtag('config', 'UA-157606098-2');
-	</script>
+    gtag('config', 'UA-157606098-2');
+  </script>
 
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<meta name="keywords" content="trail, running, treh, vrhov, slovenija, sabotin, skabrijel, sveta gora">
-	<meta name="description"
-		content="Go4trail 2021 | 12km, 28km, 58km | trail running over three summits surrounding the valley of Soča river in the Western Slovenia, 20. 11. 2021">
-	<title>Go4trail | Goriški tek</title>
-	<!--Styles-->
-	<link rel="stylesheet" href="/styles/main.css">
-	<link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
-	<link href="https://fonts.googleapis.com/css?family=Roboto:300&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Martel+Sans:800&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="keywords" content="trail, running, treh, vrhov, slovenija, sabotin, skabrijel, sveta gora">
+  <meta name="description"
+    content="Go4trail 2021 | 12km, 28km, 58km | trail running over three summits surrounding the valley of Soča river in the Western Slovenia, 20. 11. 2021">
+  <title>Go4trail | Goriški tek</title>
+  <!--Styles-->
+  <link rel="stylesheet" href="/styles/main.css">
+  <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Martel+Sans:800&display=swap" rel="stylesheet">
 </head>
 
 <body>
-	<!--Navigation bar-->
-	<header id="navigation-bar">
-		<div class="home-container">
-			<a href="/en" id="logo">Go4trail</a>
-		</div>
-		<div class="menu-icon-container">
-			<button class="menu-icon" data-target="menu">
-				<i class="fas fa-bars" id="menu-button"></i>
-			</button>
-		</div>
-		<!--Menu content-->
-		<div id="menu">
-			<a id="close-button">&times;</a>
-			<ul class="menu-content">
-				<li><a href="/en/faq" class="menu-link">FAQ</a></li>
-				<li><a href="/en/races" class="menu-link" id="races-button">Races</a></li>
-				<li><a href="https://sportotime.com/eng/event/1171" target="_blank" rel="noopener noreferrer"
-						class="menu-link">Registration</a></li>
-				<li><a href="/en/about" class="menu-link">About</a></li>
-				<li><a href="/en/contact-us" class="menu-link">Contact</a></li>
-				<li>
-					<a href="/sl/proge/goriski-tek" class="language-switch menu-link">SI</a>
-					<span>/</span>
-					<a href="/it/gare/goriski-tek" class="language-switch menu-link">IT</a>
-				</li>
-			</ul>
-		</div>
-	</header>
+  <!--Navigation bar-->
+  <header id="navigation-bar">
+    <div class="home-container">
+      <a href="/en" id="logo">Go4trail</a>
+    </div>
+    <div class="menu-icon-container">
+      <button class="menu-icon" data-target="menu">
+        <i class="fas fa-bars" id="menu-button"></i>
+      </button>
+    </div>
+    <!--Menu content-->
+    <div id="menu">
+      <a id="close-button">&times;</a>
+      <ul class="menu-content">
+        <li><a href="/en/faq" class="menu-link">FAQ</a></li>
+        <li><a href="/en/races" class="menu-link" id="races-button">Races</a></li>
+        <li><a href="https://sportotime.com/eng/event/1171" target="_blank" rel="noopener noreferrer"
+            class="menu-link">Registration</a></li>
+        <li><a href="/en/about" class="menu-link">About</a></li>
+        <li><a href="/en/contact-us" class="menu-link">Contact</a></li>
+        <li>
+          <a href="/sl/proge/goriski-tek" class="language-switch menu-link">SI</a>
+          <span>/</span>
+          <a href="/it/gare/goriski-tek" class="language-switch menu-link">IT</a>
+        </li>
+      </ul>
+    </div>
+  </header>
 
-	<div class="flex-box">
-		<!--Showcase image-->
-		<section>
-			<div class="showcase-image">
-				<img src="../../assets/images/goriski-tek-m.jpg" 
-					alt="Go4trail - Goriški tek and Walk for Hope"
-					class="image-top">
-				<div class="text-wrap grid">
-					<span class="showcase-title content-wrap">
-						8th Goriški tek and Walk for Hope
-					</span>
-				</div>
-			</div>
-		</section>
-		<!--section-D-->
-		<section class="section-d grid flex-item">
-			<div class="content-wrap">
-				<p class="opening">Charity run co-organised with <a href="http://www.ko-rak.si/" target="_blank"
-						rel="noopener noreferrer">ko-Rak society</a>, which organises various preventive programmes
-					dealing with cancer.</p>
+  <div class="flex-box">
+    <!--Showcase image-->
+    <section>
+      <div class="showcase-image">
+        <img src="../../assets/images/goriski-tek-m.jpg" alt="Go4trail - Goriški tek and Walk for Hope"
+          class="image-top">
+        <div class="text-wrap grid">
+          <span class="showcase-title content-wrap">
+            8th Goriški tek and Walk for Hope
+          </span>
+        </div>
+      </div>
+    </section>
+    <!--section-D-->
+    <section class="section-d grid flex-item">
+      <div class="content-wrap">
+        <p class="opening">Charity run co-organised with <a href="http://www.ko-rak.si/" target="_blank"
+            rel="noopener noreferrer">ko-Rak society</a>, which organises various preventive programmes
+          dealing with cancer.</p>
 
-				<ul class="info-container">
-					<li>Distance: <b>4 km, 10 km in 15</b></li>
-					<li>Date: <b>3th October 2020</b></li>
-					<li>Start: <b>10.30</b>, <i>Bevk Square Nova Gorica</i></li>
-				</ul>
+        <ul class="info-container">
+          <li>Distance: <b>4 km, 10 km in 15</b></li>
+          <li>Date: <b>3th October 2020</b></li>
+          <li>Start: <b>10.30</b>, <i>Bevk Square Nova Gorica</i></li>
+        </ul>
 
-				<h2>Entry fee</h2>
-				<ul class="price">
-					<li>until 1st July 2020: <b>8 €</b></li>
-					<li>until the day of the event: <b>10 €</b></li>
-					<li class="small-text">* Entry fees will be donated to charity.</li>
-				</ul>
+        <h2>Entry fee</h2>
+        <ul class="price">
+          <li>until 1st July 2020: <b>8 €</b></li>
+          <li>until the day of the event: <b>10 €</b></li>
+          <li class="small-text">* Entry fees will be donated to charity.</li>
+        </ul>
 
-				<ul class="accordian top-padding">
-					<li>
-						<a class="toggle" href="javascript:void(0);">+ Track description</a>
-						<ul class="inner  top-padding">
-							<li>
-								<p>Race takes place on mostly flat terrain through Nova Gorica and Šempeter.</p>
-							</li>
-						</ul>
-					</li>
+        <ul class="accordian top-padding">
+          <li>
+            <a class="toggle" href="javascript:void(0);">+ Track description</a>
+            <ul class="inner  top-padding">
+              <li>
+                <p>Race takes place on mostly flat terrain through Nova Gorica and Šempeter.</p>
+              </li>
+            </ul>
+          </li>
 
-					<li>
-						<a class="toggle" href="javascript:void(0);">+ Contact</a>
-						<ul class="inner  top-padding">
-							<li>Javni zavod za šport Nova Gorica</li>
-							<li>+386 (0)53302020</li>
-							<li><a href="mailto:info@sz-ng.si">info@sz-ng.si</a></li>
-						</ul>
-					</li>
-				</ul>
+          <li>
+            <a class="toggle" href="javascript:void(0);">+ Contact</a>
+            <ul class="inner  top-padding">
+              <li>Javni zavod za šport Nova Gorica</li>
+              <li>+386 (0)53302020</li>
+              <li><a href="mailto:info@sz-ng.si">info@sz-ng.si</a></li>
+            </ul>
+          </li>
+        </ul>
 
-				<div class="center top-padding">
-					<a href="https://sportotime.com/eng/event/1171" target="_blank" rel="noopener noreferrer"
-						class="btn">REGISTER NOW</a>
-					<p class="top-padding">Or check out other <a href="/en/races">races</a>.
-					</p>
-				</div>
-			</div>
-		</section>
+        <div class="center top-padding">
+          <a href="https://sportotime.com/eng/event/1171" target="_blank" rel="noopener noreferrer" class="btn">REGISTER
+            NOW</a>
+          <p class="top-padding">Or check out other <a href="/en/races">races</a>.
+          </p>
+        </div>
+      </div>
+    </section>
 
-		<!--section-C-->
-		<section class="section-c" class="grid">
-			<div class="content-wrap">
-				<div class="icon-container">
-					<a href="https://www.instagram.com/go4trail/" target="_blank" rel="noopener noreferrer" class="icon"
-						data-target="menu">
-						<i class="fab fa-instagram"></i></a>
-					<a href="https://www.facebook.com/trail3v.eu/" target="_blank" class="icon" data-target="menu">
-						<i class="fab fa-facebook-square"></i></a>
-				</div>
-			</div>
-		</section>
+    <!--section-C-->
+    <section class="section-c" class="grid">
+      <div class="content-wrap">
+        <div class="icon-container">
+          <a href="https://www.instagram.com/go4trail/" target="_blank" rel="noopener noreferrer" class="icon"
+            data-target="menu">
+            <i class="fab fa-instagram"></i></a>
+          <a href="https://www.facebook.com/trail3v.eu/" target="_blank" class="icon" data-target="menu">
+            <i class="fab fa-facebook-square"></i></a>
+        </div>
+      </div>
+    </section>
 
-		<!--Footer-->
-		<footer id="main-footer" class="grid">
-			<div>Go4trail | by <a href="https://teowinkler.com" target="_blank" rel="noopener noreferrer">Teo
-					Winkler</a></div>
-		</footer>
-	</div>
+    <!--Footer-->
+    <footer id="main-footer" class="grid">
+      <div>Go4trail | by <a href="https://teowinkler.com" target="_blank" rel="noopener noreferrer">Teo
+          Winkler</a></div>
+    </footer>
+  </div>
 
-	<!--Scripts-->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" type="text/javascript"></script>
+  <!--Scripts-->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" type="text/javascript"></script>
   <script type="text/javascript" src="/js/app.js"></script>
 </body>
 
