fix typo in header gotrim page

--- a/sl/proge/gotrim-12km.html
+++ b/sl/proge/gotrim-12km.html
@@ -17,7 +17,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="keywords" content="go4trail, trail, tek, treh, vrhov, slovenija, sabotin, škabrijel, sveta gora">
   <meta name="description"
-    content="Go4trail 2021 | 12km, 28km, 58km | tekaška preizkušnja med tremi vrhovi ob dolini reke Soče, 20. 11.1">1
+    content="Go4trail 2021 | 12km, 28km, 58km | tekaška preizkušnja med tremi vrhovi ob dolini reke Soče, 20. 11.1">
   <title>Go4trail | GOTRIM 12km</title>
   <!--Styles-->
   <link rel="stylesheet" href="/styles/main.css">
